# canbus-generator

./: .gitreview  CMakeLists.txt  MAINTAINERS  Makefile  README.md  can-config-generator.sln  can-config-generator.vcxproj
conf.d/: config.cmake
src/: CMakeLists.txt  converter.cpp  converter.hpp  main.cpp  main.hpp
src/openxc/: can_bus.cpp  can_bus.hpp  can_message.cpp  can_message.hpp  command.cpp  command.hpp  decoder.cpp  decoder.hpp  diagnostic_message.cpp  diagnostic_message.hpp  mapping.cpp  mapping.hpp  message_set.cpp  message_set.hpp  signal.cpp  signal.hpp
tests/: basic.json  signals.json
